# bosbase

./: .air.toml  .dockerignore  .goreleaser.yaml  LICENSE  Makefile  README.md  bosbase.go  bosbase_test.go  build-docker.sh  go.mod  go.sum  pocketbase.go  pocketbase_test.go
apidocs/: API_REFERENCE.md
apis/: activation.go  activation_test.go  api_error_aliases.go  backup.go  backup_create.go  backup_test.go  backup_upload.go  base.go  base_test.go  batch.go  batch_test.go  cache.go  cache_test.go  collection.go  collection_import.go  collection_import_test.go  collection_sql.go  collection_sql_test.go  collection_test.go  create_rule_dummy.go  cron.go  cron_test.go  file.go  file_test.go  graphql.go  graphql_schema_parse_test.go  graphql_test.go  health.go  health_test.go  installer.go  langchaingo.go  llm_documents.go  logs.go  logs_test.go  middlewares.go  middlewares_body_limit.go  middlewares_body_limit_test.go  middlewares_cors.go  middlewares_gzip.go  middlewares_rate_limit.go  (+62 more)
booster/: Cargo.toml
booster/apitest/: README.md  stress_postgres.py  stress_run.py  test_postgres.py  test_run.py
booster/apitest/docs/: run.md
booster/components/: Cargo.toml
booster/components/docs/: build.md
booster/components/src/: tokio-postgres.rs  tokio-redis.rs
booster/docs/: POSTGRES.md  README.md  REDIS.md  WASMTIME_TUNING.md
booster/src/: main.rs  pool.rs  postgres.rs  redis.rs
chromem-go/: collection.go  collection_test.go  db.go  db_test.go  embed_openai.go  embed_openai_test.go  go.mod  persistence.go  postgres_store.go
cmd/: serve.go  settings.go  (+3 more)
(+1215 files in other folders)
