[package]
name = "booster"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["full"] }
axum = "0.7.9"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tempfile = "3.22.0"
notify = "8.2.0"
uuid = { version = "1.18.1", features = ["v7", "fast-rng"] }
wasmtime = "39.0.1"
wasmtime-wasi = "39.0.1"
bb8-redis = "0.26.0"
bb8-postgres = "0.9.0"
tokio-postgres = { version = "0.7.13", features = ["with-uuid-1", "with-serde_json-1"] }
base64 = "0.22.1"

[dev-dependencies]
wat = "1.240.0"
